# python-oscquery

./: .gitignore  README.md  pyproject.toml  test_query_client.py  tinytest.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  python-package.yml
examples/: example_oscquery_client.py  example_oscquery_server_with_python-osc_integration.py  example_oscquery_standalone_server.py
src/: example_oscquery_client.py  example_oscquery_server.py  example_oscquery_server_with_oython-osc_integration.py
src/pythonoscquery/: osc_query_service.py
src/tinyoscquery/: osc_handler_wrapper.py  pythonosc_callback_wrapper.py
tests/: test_callback_wrapper.py  test_handler_wrapper.py  test_osc_path_node.py  test_osc_queryservice.py
tinyoscquery/: osc_query_browser.py  osc_query_client.py  osc_query_service.py
tinyoscquery/shared/: node.py  osc_namespace.py  osc_path_node.py  osc_spec.py
