[project]
name = "python-oscquery"
version = "0.2.0"
description = "OSCQuery library to advertise an Open Sound Control (OSC) service"
authors = [
    { name = "Cyberkitsune" },
    { name = "Frank Klein", email = "coding@theatris.de" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "python-osc>=1.9.3",
    "requests>=2.32.5",
    "zeroconf>=0.39.1",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=importlib", ]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]
